--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@
 torch==2.3.0
 torchvision==0.18.0
 torchaudio==2.3.0
-xformers==0.0.26.post1
+# macos may not work
+# xformers==0.0.26.post1
 tokenizers
 sentencepiece
 shortuuid
@@ -29,7 +30,8 @@ git+https://github.com/JiuhaiChen/diffusers.git
 deepspeed
 datasets
 tabulate
-flash_attn==2.6.2
+# macos may not work
+# flash_attn==2.6.2
 ninja
 qwen_vl_utils
 huggingface_hub
