--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 -e .
 
-torch==2.3.0
-torchvision==0.18.0
-torchaudio==2.3.0
-xformers==0.0.26.post1
 tokenizers
 sentencepiece
 shortuuid
@@ -26,11 +22,17 @@ einops-exts==0.0.4
 timm==0.6.13
 ftfy
 git+https://github.com/JiuhaiChen/diffusers.git
-deepspeed
 datasets
 tabulate
-flash_attn==2.6.2
 ninja
 qwen_vl_utils
 huggingface_hub
 wandb
+
+
+pillow>=9.0.0
+python-multipart
+typing-extensions
+# uvicorn[standard]
+# httpx[http2]
+psutil>=5.9.0
